# rust-google-analytics-api-ga4

./: .gitignore  Cargo.toml  README.md  readme.md
.github/workflows/: rust-clippy.yml
src/: batch_run_pivot_reports.rs  batch_run_reports.rs  check_compatibility.rs  get_metadata.rs  lib.rs  run_pivot_reports.rs  run_realtime_report.rs  run_report.rs  types.rs
src/http/: mod.rs
tests/: test.rs
