[package]
name = "google-analytics-api-ga4"
version = "0.1.3"
edition = "2021"

authors = ["uiuifree"]
description = "ElasticSearch Response Parser"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = ["ga4","ga","google_analytics"]
[dependencies]
reqwest ={version="0.11.10",features=["json"]}

# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"


yup-oauth2="7.0.0"
[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
csv="1.1.6"