[package]
name = "google-analytics-api-ga4"
version = "0.1.5"
edition = "2021"

authors = ["uiuifree"]
description = "Google Analytics Data Api GA4(beta)"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = ["ga4","ga","google_analytics"]

readme="README.md"
repository = "https://github.com/uiuifree/rust-google-analytics-api-ga4"
[dependencies]
reqwest ={version= "0.12.9",features=["json"]}

# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#serde_derive = "1.0"


[dev-dependencies]
tokio = { version = "1.20.4", features = ["full"] }
yup-oauth2="7.0.0"
csv="1.1.6"